Fixed white space below container. Also removed transition on opponent pick, so we couldnt see what it is before result.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ body {
    grid-template-areas: 'header' 'game' 'rules';
    justify-items: center;
    background: $bg-gradient;
-   min-height: 100%;
+   min-height: 100vh;
    padding: 25px;
 }
 
